--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ li.large-nav:hover{
 
 
 .landing-page{
-    background-image: url("../images/666.jpg");
+    background-image: url("666.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
